Code formatting changes

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,7 +6,7 @@
     <title>{{ renderData.title or title or metadata.title }}</title>
     <meta name="Description" content="{{ renderData.description or description or metadata.description }}">
     <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
-    <link rel="stylesheet" href="{{ '/css/prism-atom-dark.css' | url }}">
+    <link rel="stylesheet" href="{{ '/css/prism-themes/prism-base16-ateliersulphurpool.light.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/font-awesome/css/fontawesome.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/font-awesome/css/brands.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/fonts/index.css' | url }}">
