--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -7,7 +7,7 @@ templateClass: tmpl-post
   <div class="post-body">
     <div class="post-header">
       <h1>{{ title }}</h1>
-      <h4>By <a href="{{ author_page | url }}">{{ author }}</a> and the Hyperdrive team.</h4>
+      <h4>By <a href="{{ first_author_page | url }}">{{ first_author }}</a>
       <h4>{{ date | htmlDateString }}<h4>
     </div>
     <article>
