--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ p,
 pre,
 img,
 video {
-  max-width: 55rem;
+  max-width: 45rem;
 }
 p,
 a[href] {
@@ -77,21 +77,20 @@ table th {
   padding-right: 1em;
 }
 
-@media screen and (min-width: 901px) {
+@media screen and (min-width: 1501px) {
   pre,
   code {
     line-height: 1.5;
     font-size: 14px;
   }
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1500px) {
   pre,
   code {
     line-height: 1.2;
     font-size: 10px;
   }
 }
-
 
 pre {
   direction: ltr;
@@ -171,7 +170,6 @@ pre {
 .social-icon {
   display: inline;
   margin-right: 0.5em;
-
 }
 
 /* Posts list */
@@ -184,7 +182,7 @@ pre {
   align-items: center;
   flex-direction: row;
   line-height: 1.2;
-  max-width: 55rem;
+  max-width: 45rem;
 }
 .postlist-item:before {
   pointer-events: none;
@@ -213,13 +211,13 @@ pre {
 }
 @media screen and (min-width: 601px) {
   .postlist-item {
-    width: 55rem;
+    width: 45rem;
   }
 }
 
 
 /* Tags */
-.tag {
+.templateClassag {
   display: inline-block;
   vertical-align: text-top;
   text-transform: uppercase;
@@ -271,12 +269,14 @@ a[href].direct-link:focus:visited,
   margin-top: 10px;
   margin-bottom: 30px;
 }
-.post-body h4 {
-  color: var(--mediumgray);
-  margin: .1em;
+
+.post-header h4 {
+  margin-top: 0;
+  margin-bottom: .1em;
 }
-.post-body h1 {
-  margin-bottom: .3em;
+
+strong {
+  font-weight: 900;
 }
 
 @media screen and (max-width: 600px) {
@@ -307,38 +307,30 @@ a[href].direct-link:focus:visited,
 }
 
 .video-container {
-  overflow: hidden;
-}
-.video-container video {
   width: 100%;
-  margin-top: -50px;
-}
-.video-container-lg {
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-.video-container-lg video {
-  width: 70%;
   margin-top: 50px;
-  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
-@media screen and (min-width: 1501px) {
-  #van-gogh-vid {
-    margin-left: -60px;
-  }
-  #tree-vid {
-    margin-left: -70px;
-  }
+
+.video-container-lg {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
-@media screen and (max-width: 1500px) {
-  #van-gogh-vid {
-    margin-left: -20px;
-  }
-  #tree-vid {
-    margin-left: -20px;
-  }
+
+.video-container video {
+  object-fit: contain;
+  margin-top: -100px;
+  padding: 0;
+}
+
+.video-container-lg video {
+  object-fit: contain;
+  padding: 0;
 }
 
 footer {
