--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -57,5 +57,8 @@
 
       <!-- Current page: {{ page.url | url }} -->
     </div>
+    <!-- SimpleAnalytics -->
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""></noscript>
   </body>
 </html>
