--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -1,5 +1,7 @@
 ---
 layout: layouts/base.njk
 templateClass: tmpl-home
+title: "The Hypercore Protocol"
+description: "Building blocks for making fast and scalable peer-to-peer applications."
 ---
 {{ content | safe }}
