Update meta tags

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -10,10 +10,10 @@
     <meta name="keywords" content="decentralization,hypercore,peer-to-peer,p2p,hyperdrive">
 
     <!-- Social -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@HypercoreProto">
     <meta name="twitter:creator" content="@HypercoreProto">
-    <meta name="og:title" content="{{ renderData.description or description or metadata.description }}">
+    <meta name="og:title" content="{{ renderData.title or title or metadata.title }}">
     <meta name="og:description" content="{{ renderData.description or description or metadata.description }}">
     <meta name="twitter:image" content="https://hyper-blog-preview.now.sh/img/hypercore-protocol.png">
 
