--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -2,6 +2,6 @@
 layout: layouts/base.njk
 templateClass: tmpl-home
 title: "The Hypercore Protocol"
-description: "Building blocks for making fast and scalable peer-to-peer applications."
+description: "A fast, scalable, and secure peer-to-peer protocol for everyone."
 ---
 {{ content | safe }}
