--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -15,7 +15,7 @@
     <meta name="twitter:creator" content="@HypercoreProto">
     <meta name="og:title" content="{{ renderData.title or title or metadata.title }}">
     <meta name="og:description" content="{{ renderData.description or description or metadata.description }}">
-    <meta name="twitter:image" content="https://hyper-blog-preview.now.sh/img/hypercore-protocol.png">
+    <meta name="twitter:image" content="https://blog.hypercore-protocol.org/img/hypercore-protocol.png">
 
     {% set css %}
      {% include "css/index.css" | url %}
