--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 templateClass: tmpl-home
-title: "The Hypercore Protocol"
+title: "The Hypercore Protocol Blog"
 description: "A fast, scalable, and secure peer-to-peer protocol for everyone."
 ---
 {{ content | safe }}
